--- a/FrontEnd/html/claim_step2.html
+++ b/FrontEnd/html/claim_step2.html
@@ -22,13 +22,13 @@
     <form action="" class="padding-1">
    
         <label for="select_name" class="mt-3 mb-3">Name</label>
-    <input id="select_name"  placeholder="Name" class="form-select" > </input>
+    <select id="select_name"  placeholder="Name" class="form-select" > </select>
    
     <label for="select_adhaarno." class=" mt-3 mb-3">Aadhar No.</label>
-   <input type="number" minlength="12" id="select_aadharno"  placeholder="Aadhar No." class="form-select" > </input>
+   <select type="number" minlength="12" id="select_aadharno"  placeholder="Aadhar No." class="form-select" > </select>
    
    <label for="select_membershipno" class="mt-3 mb-3">Membership No.</label>
-   <input id="select_membershipno"  placeholder="Membership No." class="form-select" > </input>
+   <select id="select_membershipno"  placeholder="Membership No." class="form-select" > </select>
    
    <a href="tel:9888544411" id="call_icon" class="d-none float-end mt-5"><img src="../icons/call.svg" alt=""></a>
    
