--- a/FrontEnd/html/directClaim2.html
+++ b/FrontEnd/html/directClaim2.html
@@ -7,6 +7,10 @@
     <link rel="shortcut icon" href="../icons/site_logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="../css/directClaim2.css">
     <title>DirectClaimStep2</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Palanquin:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="../icons/site_logo.svg" type="image/x-icon">
    
 </head>
 <body>
