--- a/FrontEnd/html/home_navigation.htm
+++ b/FrontEnd/html/home_navigation.htm
@@ -52,7 +52,7 @@
                     </p>
                 </div>
                 <div class="left_valid">
-                    <p class="valid_title">
+                    <p id="valid_title1" class="valid_title">
                         Submit Date
                     </p>
                     <p id="claimValidThru" class="valid_thru">
@@ -63,7 +63,7 @@
             
             <div class="cover_block">
                 <span>
-                    <p class="cover_title">
+                    <p id="cover_title1" class="cover_title">
                         Benefit Item
                     </p>
                     <p id="benefitItem" class="cover_amount">
@@ -71,7 +71,7 @@
                     </p>
                 </span>
                 <span class="left_valid">
-                    <p class="valid_title">
+                    <p id="clm_status" class="valid_title">
                         Claim Status
                     </p>
                     <p id="claimStatus" class="valid_thru">
