--- a/FrontEnd/html/login.html
+++ b/FrontEnd/html/login.html
@@ -23,7 +23,7 @@
             <img id="email_symb" class=" vanish visible" src="..\images\error_symbol.svg" alt="">
             <span class="error visible vanish" id="email_error"> <!-- email --> </span>
 
-            <input id="pass_input" class="input_regis_log position" type="text" placeholder="Password">
+            <input id="pass_input" class="input_regis_log position" type="password" placeholder="Password">
             <img id="pass_symb" class=" vanish visible" src="..\images\error_symbol.svg" alt="">
             <span class="error visible vanish" id="pass_error"> <!-- password --> </span>
 
