--- a/FrontEnd/html/directClaim1.html
+++ b/FrontEnd/html/directClaim1.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Palanquin:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="../icons/site_logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="../css/directClaim1.css">
     <title>DirectClaimStep1</title>
